Added course code to course view

--- a/src/AttendanceManager/templates/student/courses.html
+++ b/src/AttendanceManager/templates/student/courses.html
@@ -34,7 +34,7 @@
 
     {% if selected_course != None and approved == True %}
     <h3>
-      {{ selected_course.Name }}
+      {{ selected_course.Name }} ({{ selected_course.CourseCode }})
     </h3>
 
     <hr>
