--- a/src/AttendanceManager/templates/teacher/courses.html
+++ b/src/AttendanceManager/templates/teacher/courses.html
@@ -33,7 +33,7 @@
   <div class=" col-9">
     {% if selected_course != None %}
     <h3>
-      {{ selected_course.Name }}
+      {{ selected_course.Name }} ({{ selected_course.CourseCode }})
 
       <div class="float-end">
         <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#newOccasion">Create New
